--- a/wechat/src/main/webapp/xcview/css/shop/commodity_details.css
+++ b/wechat/src/main/webapp/xcview/css/shop/commodity_details.css
@@ -591,6 +591,7 @@ header{
     height: 100%;
     margin: 0 auto;
     /*background: darkseagreen;*/
+    position: relative;
 }
 .shopping_trolley .message{
 	width: 6.98rem;
@@ -621,6 +622,19 @@ header{
 	overflow: hidden;
 }
 .shopping_trolley_center .message .category span{
+	font-size: .26rem;
+	color: #666666;
+	display: inherit;
+    float: left;
+    margin-right: .2rem;
+}
+.category{
+	overflow: hidden;
+	position: absolute;
+    top: 1.6rem;
+    left: 2.45rem;
+}
+.category span{
 	font-size: .26rem;
 	color: #666666;
 	display: inherit;
