--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -477,13 +477,13 @@ a:active{text-decoration:none;}/* 指正在点的链接*/
     margin-left: 30px;
     cursor: pointer;
 }
-.shop-null {
+.shop-null, .order-null {
 	width: 100%;
     text-align: center;
     color: #999999;
     padding: 160px 0;
 }
-.shop-null p{
+.shop-null, .order-null p{
 	margin-top: 20px;
 }
 .ware-list-content{
