--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -539,11 +539,13 @@ a:active{text-decoration:none;}/* 指正在点的链接*/
 	position: absolute;
     right: -19px;
     top: 7px;
+    cursor: pointer;
 }
 .goods-top-menu ul li:nth-child(5) .order-down{
 	position: absolute;
     right: -19px;
     bottom: 6px;
+    cursor: pointer;
 }
 .goods-top-menu ul li:nth-child(5) .order-active{
 	color: #00bc12;
@@ -1150,8 +1152,8 @@ outline: none;
 }
 
 .shopping-list-wrap tr td .shopping-fengmian{
-	    width: 106px;
-    height: 60px;
+	max-width: 106px;
+    max-height: 60px;
 }
 .shopping-list-wrap tr td .select-ware-img {
     width: 17px;
