--- a/wechat/src/main/webapp/xcview/css/shop/all_evaluation.css
+++ b/wechat/src/main/webapp/xcview/css/shop/all_evaluation.css
@@ -243,21 +243,21 @@ header {
 
 /*点击购物车出现提示开始*/
 .shopping_trolley{
-    width: 100%;
-    height: 100%;
-    display: none;
+	width: 100%;
+	height: 100%;
+	display: none;
 }
 .shopping_trolley_bg{
-    position: fixed;
-    top: 0;
-    width: 7.5rem;
-    height: 100%;
-    background: #000;
-    opacity: 0.3;
-    z-index: 2;
+	position: fixed;
+	top: 0;
+	width: 7.5rem;
+	height: 100%;
+	background: #000;
+	opacity: 0.3;
+	z-index: 2;
 }
 .shopping_trolley_main{
-    position: fixed;
+	position: fixed;
     bottom: 0;
     z-index: 2;
     width: 7.5rem;
@@ -269,71 +269,89 @@ header {
     border-radius: 16px 16px 0 0;
 }
 .shopping_trolley_center{
-    width: 7.5rem;
+	width: 7.5rem;
     height: 100%;
     margin: 0 auto;
     /*background: darkseagreen;*/
+    position: relative;
 }
 .shopping_trolley .message{
-    width: 6.98rem;
+	width: 6.98rem;
     height: 2rem;
     margin: 0 auto;
     margin-bottom: .3rem;
 }
 .surface_plot{
-    float: left;
-    width: 2rem;
-    height: 2rem;
-    display: inline-block;
-    margin-right: .2rem;
+	float: left;
+	width: 2rem;
+	height: 2rem;
+	display: inline-block;
+	margin-right: .2rem;
 }
 .shopping_trolley_center .message .price{
-    font-size: .28rem;
-    color: #F97215;
-    margin-top: 0;
-    margin-bottom: 0.1rem;
-    padding-top: 0.75rem;
+	font-size: .28rem;
+	color: #F97215;
+	margin-top: 0;
+	margin-bottom: 0.1rem;
+	padding-top: 0.75rem;
 }
 .shopping_trolley_center .message .repertory{
-    font-size: .26rem;
-    color: #666666;
-    margin-bottom: 0.1rem;
+	font-size: .26rem;
+	color: #666666;
+	margin-bottom: 0.1rem;
 }
 .shopping_trolley_center .message .category{
-    overflow: hidden;
+	overflow: hidden;
 }
 .shopping_trolley_center .message .category span{
-    font-size: .26rem;
-    color: #666666;
-    display: inherit;
+	font-size: .26rem;
+	color: #666666;
+	display: inherit;
+    float: left;
+    margin-right: .2rem;
+}
+.category{
+	overflow: hidden;
+	position: absolute;
+    top: 1.6rem;
+    left: 2.45rem;
+}
+.category span{
+	font-size: .26rem;
+	color: #666666;
+	display: inherit;
     float: left;
     margin-right: .2rem;
 }
 .shopping_trolley_center .specifications{
-    width: 100%;
+	width: 100%;
     overflow: hidden;
-    border-bottom: 1px solid #f0f0f0;
     margin-bottom: .2rem;
 }
 .shopping_trolley_center .specifications span{
-    width: 6.98rem;
+	width: 6.98rem;
     margin: 0 auto;
-    font-size: .26rem;
-    color: #666666;
-    margin-bottom: .2rem;
-    display: inherit;
+	font-size: .26rem;
+	color: #666666;
+	margin-top: .2rem;
+	margin-bottom: .2rem;
+	display: inherit;
+}
+.shopping_trolley_center .specifications span:first-child{
+	margin-top: 0;
 }
 .specifications_ul{
-    width: 6.98rem;
-    margin: 0 auto;
+	width: 7.5rem;
+	margin: 0 auto;
+    border-bottom: 1px solid #f0f0f0;
+    overflow: hidden;
 }
 .specifications_ul li{
-    padding: .1rem .24rem;
-    border-radius: 100px;
+	padding: .1rem .24rem;
+	border-radius: 100px;
     display: inline-block;
     float: left;
-    margin-right: .3rem;
-    margin-bottom: .2rem;
+    margin: 0 .04rem .2rem .26rem;
     font-size: .24rem;
 }
 .specifications_ul .casing{
@@ -341,36 +359,36 @@ header {
     background: #F0F0F0;
 }
 .public{
-    color: #FFFFFF !important;
-    background: #F97215 !important;
+	color: #FFFFFF !important;
+	background: #F97215 !important;
 }
 /* .casing_li{
-    color: #FFFFFF !important;
-    background: #F97215 !important;
+	color: #FFFFFF !important;
+	background: #F97215 !important;
 } */
 /*分类*/
 .shopping_trolley_center .classify{
-    width: 100%;
+	width: 100%;
     overflow: hidden;
     border-bottom: 1px solid #f0f0f0;
     margin-bottom: .28rem;
 }
 .shopping_trolley_center .classify span{
-    width: 6.98rem;
+	width: 6.98rem;
     margin: 0 auto;
-    font-size: .26rem;
-    color: #666666;
-    margin-bottom: .2rem;
-    display: inherit;
+	font-size: .26rem;
+	color: #666666;
+	margin-bottom: .2rem;
+	display: inherit;
 }
 .classify_ul{
-    width: 6.98rem;
-    margin: 0 auto;
+	width: 6.98rem;
+	margin: 0 auto;
 }
 .classify_ul li{
-    font-size: .24rem;
-    padding: .1rem .28rem;
-    border-radius: 100px;
+	font-size: .24rem;
+	padding: .1rem .28rem;
+	border-radius: 100px;
     display: inline-block;
     float: left;
     margin-right: .3rem;
@@ -381,12 +399,17 @@ header {
     background: #F0F0F0;
 }
 /* .hue_li{
-    color: #FFFFFF !important;
+	color: #FFFFFF !important;
     background: #F97215 !important;
 } */
 /*购买数量*/
+.bottom_fiexd{
+	width: 7.5rem;
+	position: fixed;
+	bottom: .2rem;
+}
 .shopping_trolley_center .buy{
-    width: 6.98rem;
+	width: 6.98rem;
     height: .55rem;
     /*height: 1.52rem;*/
     line-height: .55rem;
@@ -396,19 +419,19 @@ header {
     margin-bottom: .33rem;
 }
 .shopping_trolley_center .purchase_quantity{
-    font-size: .26rem;
-    color: #666666;
-    float: left;
+	font-size: .26rem;
+	color: #666666;
+	float: left;
 }
 .shopping_trolley_center .determine{
-    width: 6.98rem;
-    height: .72rem;
-    line-height: .72rem;
-    margin: 0 auto;
-    background: #F97215;
-    border-radius: 100px;
-    font-size: .3rem;
-    color: #FFFFFF;
-    text-align: center;
+	width: 6.98rem;
+	height: .72rem;
+	line-height: .72rem;
+	margin: 0 auto;
+	background: #F97215;
+	border-radius: 100px;
+	font-size: .3rem;
+	color: #FFFFFF;
+	text-align: center;
 }
 /*点击购物车出现提示开始*/
