修改--点击确定修改购物车数量bug。确定和选择数量固定在底部区域

--- a/wechat/src/main/webapp/xcview/css/shop/shopping_trolley.css
+++ b/wechat/src/main/webapp/xcview/css/shop/shopping_trolley.css
@@ -477,3 +477,11 @@ center .spinner .increase{
 .payment-bar{
 	display: none;
 }
+
+
+/*给确定添加固定底部*/
+.bottom_fiexd{
+ 	width: 7.5rem;
+ 	position: fixed;
+ 	bottom: .2rem;
+}
