--- a/wechat/src/main/webapp/xcview/css/shop/shop.css
+++ b/wechat/src/main/webapp/xcview/css/shop/shop.css
@@ -184,6 +184,7 @@ header{
 	height: .32rem;
 	vertical-align:middle;
     margin-right: 0.08rem;
+    margin-top: -.01rem;
 }
 .low_to_high{
 	display: none;
