--- a/wechat/src/main/webapp/xcview/css/shop/all_evaluation.css
+++ b/wechat/src/main/webapp/xcview/css/shop/all_evaluation.css
@@ -435,3 +435,24 @@ header {
 	text-align: center;
 }
 /*点击购物车出现提示开始*/
+
+/*暂无评价显示开始*/
+.quie_pic{
+	width: 100%;
+    /* height: 4rem; */
+    margin-bottom: 1.2rem;
+    text-align: center;
+    display: none;
+    padding-bottom: 0.5rem;
+}
+.quie_pic img {
+    width: 2.5rem;
+    display: inline-block;
+    margin: 3rem 0 0.6rem;
+}
+.quie_pic p {
+    color: #BBBBBB;
+    font-size: 0.3rem;
+    margin-top: -0.5rem;
+}
+/*暂无评价显示结束*/
