搜索列表--app需求修改

--- a/wechat/src/main/webapp/xcview/css/shop/commodity_details.css
+++ b/wechat/src/main/webapp/xcview/css/shop/commodity_details.css
@@ -416,6 +416,7 @@ header{
 .commodity_details_main{
 	width: 6.98rem;
 	margin: 0 auto;
+	overflow: hidden;
 }
 .commodity_details_main .title{
 	font-size: .28rem;
