--- a/wechat/src/main/webapp/xcview/css/shop/shop-commentary.css
+++ b/wechat/src/main/webapp/xcview/css/shop/shop-commentary.css
@@ -57,8 +57,8 @@
 	overflow: hidden;
 }
 .commentary-top .ware-img img{
-	width: 100px;
-	height: 100px;
+	width: 100%;
+	height:100%;
 	display: block;
 }
 .commentary-top .ware-describe{
