物流信息返回上一级。点击客服-浮动层

--- a/wechat/src/main/webapp/xcview/css/shop/confirm_order.css
+++ b/wechat/src/main/webapp/xcview/css/shop/confirm_order.css
@@ -74,8 +74,9 @@ header{
 .select_address_main{
 	width: 7.5rem;
 	min-height: 1rem;
-	background: url(/xcview/images/shop/confirm_orders.png) bottom;
-    background-repeat-y: no-repeat;
+	/*background: url(/xcview/images/shop/confirm_orders.png) bottom;*/
+	background: url(/xcview/images/shop/confirm_orders.png) bottom no-repeat;
+    /*background-repeat-y: no-repeat;*/
     /*background-size: .89rem .11rem;*/
     padding: .3rem 0;
 }
