--- a/wechat/src/main/webapp/xcview/css/shop/healthy-home.css
+++ b/wechat/src/main/webapp/xcview/css/shop/healthy-home.css
@@ -148,14 +148,30 @@ body{
 	padding: 0.4rem 0.2rem;
 	overflow: hidden;
 }
+
+#birth-date{
+	float: left;
+	width: 3rem;
+}
 .birth-wrap .left-tip{
 	font-size: 0.3rem;
-	color: #5487C7;
+    color: #5487C7;
+    margin-right: 0.4rem;
 }
-#birth-btn{
-	width: 210rem;
-	height: 0.42ren;
-	border: 0;
-	outline: none;
-	margin-left: 0.4rem;
+#datMONTH{
+	    height: 0.4rem;
+    font-size: 0.3rem;
+    padding: 0;
+}
+.mui-input-group:before{
+	height: 0;
+}
+.mui-input-group .mui-input-row:after{
+	height: 0;
+}
+.mui-input-group:after{
+	height: 0;
+}
+.mui-dtpicker-title h5{
+	padding: 0.3rem 0;
 }
