--- a/wechat/src/main/webapp/xcview/css/shop/healthy-home.css
+++ b/wechat/src/main/webapp/xcview/css/shop/healthy-home.css
@@ -175,3 +175,18 @@ body{
 .mui-dtpicker-title h5{
 	padding: 0.3rem 0;
 }
+/*开始测评*/
+.star-test{
+	margin-top: 1.2rem;
+	text-align: center;
+}
+.star-test button{
+	width: 80%;
+	padding: 0.2rem 0;
+	background: #5487C7;
+	box-shadow: 0 0.06rem 0.08rem 0 rgba(0,0,0,0.50);
+	border-radius: 1rem;
+	color: white;
+	outline: none;
+	-webkit-tap-highlight-color:transparent;
+}
