--- a/wechat/src/main/webapp/xcview/css/shop/healthy-answer.css
+++ b/wechat/src/main/webapp/xcview/css/shop/healthy-answer.css
@@ -5,12 +5,6 @@ body{
 	background-size: contain;	background: url("/xcview/images/answer-bg.png") no-repeat center;
 
 }
-.aaa{
-	width: 3rem;
-	height: 5rem;
-	  background: -webkit-linear-gradient(to bottom,#A5CDFF 0%, #fff 100%); /* Safari 5.1 - 6.0 */
- 
-}
 .wrap-header{
 	width: 100%;
 	height: 0.88rem;	
@@ -62,7 +56,7 @@ body{
 .answer-bg{
 	width:5.2rem;
 	height: 3.1rem;
-	background: url("/xcview/images/result.png") no-repeat center;
+	background: url("/xcview/images/answer.png") no-repeat center;
 	    background-size: contain;
     margin: 0.7rem auto 0.8rem;
 }
