底部客服区域增加左边距

--- a/wechat/src/main/webapp/xcview/css/shop/commodity_details.css
+++ b/wechat/src/main/webapp/xcview/css/shop/commodity_details.css
@@ -497,6 +497,7 @@ header{
     text-align: center;
     margin-top: .12rem;
     margin-right: .6rem;
+    margin-left: .2rem;
 }
 .footer .service img{
 	width: .42rem;
