确认订单页--ui。详情ui。推荐医师ui。全部评价--刷新优化

--- a/wechat/src/main/webapp/xcview/css/shop/all_evaluation.css
+++ b/wechat/src/main/webapp/xcview/css/shop/all_evaluation.css
@@ -178,6 +178,7 @@ header {
     text-align: center;
     margin-top: .12rem;
     margin-right: .6rem;
+    margin-left: .2rem;
 }
 .footer .service img{
     width: .42rem;
@@ -466,3 +467,6 @@ header {
     margin-top: -0.5rem;
 }
 /*暂无评价显示结束*/
+.upwrap-tips{
+	display: none !important;
+}
