--- a/wechat/src/main/webapp/xcview/css/shop/all_evaluation.css
+++ b/wechat/src/main/webapp/xcview/css/shop/all_evaluation.css
@@ -148,6 +148,23 @@ header {
 	font-size: .28rem;
 	color: #333333;
 }
+.list .save-list-img ul{
+	overflow: hidden;
+}
+.list .save-list-img li{
+	width: 1.6rem;
+	height: 1.6rem;
+	border: 1px dashed #ccc;	
+	overflow: hidden;
+	margin-right: 0.14rem;
+	margin-top: 0.2rem;
+	float: left;
+}
+.list .save-list-img li img{
+	width: 100%;
+	height: 100%;
+}
+
 /*中间区域结束*/
 
 /*底部区域开始*/
