--- a/wechat/src/main/webapp/xcview/css/shop/commodity_details.css
+++ b/wechat/src/main/webapp/xcview/css/shop/commodity_details.css
@@ -411,6 +411,22 @@ header{
 	font-size: .28rem;
 	color: #333333;
 }
+.appraiser .save-list-img{
+	overflow: hidden;
+}
+.appraiser .save-list-img li{
+	width: 1.6rem;
+	height: 1.6rem;
+	border: 1px dashed #ccc;	
+	overflow: hidden;
+	margin-right: 0.14rem;
+	margin-top: 0.2rem;
+	float: left;
+}
+.appraiser .save-list-img li img{
+	width: 100%;
+	height: 100%;
+}
 /*评价结束*/
 /*商品详情开始*/
 .commodity_details{
