--首页修改-banner圆角。修改字体类型。。详情页跳转。支付成功页面。跳转列表

--- a/wechat/src/main/webapp/xcview/css/shop/shop.css
+++ b/wechat/src/main/webapp/xcview/css/shop/shop.css
@@ -254,6 +254,10 @@ header{
 	margin-bottom: 0.1rem;
 	font-size: .3rem;
 	color: #F97215;
+	font-family: "Helvetica";
+}
+.list .price span{
+	font-family: "Helvetica";
 }
 .referrer{
 	width: 3.3rem;
