--- a/wechat/src/main/webapp/xcview/css/shop/healthy-result.css
+++ b/wechat/src/main/webapp/xcview/css/shop/healthy-result.css
@@ -4,7 +4,8 @@
 body{
 
 	background: url("/xcview/images/answer-bg.png") no-repeat center;
-	    background-size: cover;
+	background-size: cover;
+	background-attachment:fixed;
 }
 .wrap-header{
 	width: 100%;
