--- a/wechat/src/main/webapp/xcview/css/shop/commodity_details.css
+++ b/wechat/src/main/webapp/xcview/css/shop/commodity_details.css
@@ -185,8 +185,8 @@ header{
 	display: flex;
 	-webkit-box-pack: center;
 	-ms-flex-pack: center;
-	-webkit-justify-content: center;
-	justify-content: center;
+	/*-webkit-justify-content: center;*/
+	/*justify-content: center;*/
 	-webkit-box-align: center;
 	-ms-flex-align: center;
 	-webkit-align-items: center;
