--- a/wechat/src/main/webapp/xcview/css/shop/healthy-result.css
+++ b/wechat/src/main/webapp/xcview/css/shop/healthy-result.css
@@ -3,7 +3,7 @@
 }
 body{
 
-	background: url("/xcview/images/answer-bg.png") no-repeat center;
+	background: url("/xcview/images/result-bg.png") no-repeat center;
 	background-size: cover;
 	background-attachment:fixed;
 }
@@ -89,7 +89,7 @@ body{
 .suggest-title{
 	width: 3.4rem;
 	height: 0.7rem;
-	background: url("/xcview/images/title-bg.png");
+	background: url("/xcview/images/result-title.png");
 	background-size: contain;
 	font-size: 0.36rem;
 	color: #FFFFFF;
@@ -121,6 +121,7 @@ body{
 	width: 0.4rem;
 	height: 0.3rem;
 	display: inline-block;
+	margin-right: 0.15rem;
 }
 .live-tip .live-text-one{
 	margin-bottom: 0.2rem;
