--- a/wechat/src/main/webapp/xcview/css/shop/method.css
+++ b/wechat/src/main/webapp/xcview/css/shop/method.css
@@ -134,6 +134,7 @@ header {
 .purchase_list_one_right span{
 	font-size: 0.3rem;
 	color: #F97215;
+	font-family: "Helvetica";
 }
 .purchase_list_one_right img{
 	width: 0.319rem;
