--- a/wechat/src/main/webapp/xcview/css/shop/all_evaluation.css
+++ b/wechat/src/main/webapp/xcview/css/shop/all_evaluation.css
@@ -217,12 +217,13 @@ header {
     width: .42rem;
     height: .42rem;
     display: block;
-    margin: 0 auto;
+    /*margin: 0 auto;*/
     margin-bottom: .08rem;
+    margin-left: .08rem;
 }
 .footer .shopping_quantity{
     position: absolute;
-    right: -.15rem;
+    right: -.06rem;
     top: 0;
     background: #F97215;
     border-radius: 100px;
@@ -322,6 +323,7 @@ header {
 	margin-top: 0;
 	margin-bottom: 0.1rem;
 	padding-top: 0.75rem;
+	font-family: "Helvetica";
 }
 .shopping_trolley_center .message .repertory{
 	font-size: .26rem;
