--- a/wechat/src/main/webapp/xcview/css/shop/healthy-home.css
+++ b/wechat/src/main/webapp/xcview/css/shop/healthy-home.css
@@ -56,7 +56,7 @@ body{
 }
 .healthy-top .left-icon{
 	width: 0.47rem;
-	height: 0.58rem;
+	height: 0.51rem;
 	margin-top: 0.1rem;
 }
 .healthy-top .right-icon{
@@ -177,20 +177,23 @@ body{
 }
 /*开始测评*/
 .star-test{
-	margin-top: 1.2rem;
+	margin-top: 1rem;
 	text-align: center;
 }
 .star-test button{
 	width: 80%;
 	padding: 0.2rem 0;
-	background: #dedede;
+	background: #5487C7;
 	box-shadow: 0 0.06rem 0.08rem 0 rgba(0,0,0,0.50);
 	border-radius: 1rem;
-	color: #4c4c4c;
+	color: white;
 	outline: none;
 	-webkit-tap-highlight-color:transparent;
+	opacity: 0.3; 
+    filter: alpha(opacity=30);
 }
 .star-test .active{
 	background: #5487C7;
-	color: white;
+	opacity: 1; 
+    filter: alpha(opacity=1);
 }
