购物车空，过期下架。。修改列表手机兼容问题

--- a/wechat/src/main/webapp/xcview/css/shop/shopping_trolley.css
+++ b/wechat/src/main/webapp/xcview/css/shop/shopping_trolley.css
@@ -436,6 +436,7 @@ center .spinner .increase{
 .list .title{
 	width: 3.3rem;
 	height: 0.74rem;
+	line-height: .4rem;
 	margin: 0 auto;
 	margin-bottom: .2rem;
 	display: -webkit-box;
