--- a/wechat/src/main/webapp/xcview/css/shop/expired_products.css
+++ b/wechat/src/main/webapp/xcview/css/shop/expired_products.css
@@ -202,6 +202,7 @@ header{
 .list .title{
 	width: 3.3rem;
 	height: 0.74rem;
+	line-height: .4rem;
 	margin: 0 auto;
 	margin-bottom: .2rem;
 	display: -webkit-box;
